--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -1,12 +1,12 @@
-:quickstart-project-name: quickstart-documentation-base
-:partner-product-name: Example Product Name
-:partner-product-short-name: Example Product Name
-:partner-company-name: Example Company Name, Ltd.
-:doc-month: May
+:quickstart-project-name: quickstart-amazon-aurora-mysql
+:partner-product-name: Amazon Aurora MySQL database
+:partner-product-short-name: Aurora MySQL
+//:partner-company-name: Example Company Name, Ltd.
+:doc-month: September
 :doc-year: 2020
-:partner-contributors: John Doe and Jane Doe - {partner-company-name}
-:quickstart-contributors: Jim Smith - AWS Global Partner SA, AWS + Joe Jones - Technical Product Manager, AWS
-:deployment_time: 30 minutes / 1 hour
+//:partner-contributors: John Doe and Jane Doe - {partner-company-name}
+:quickstart-contributors: AWS Quick Start team
+:deployment_time: 30 minutes
 :default_deployment_region: us-east-1
 // Uncomment these two attributes if you are leveraging
 // - an AWS Marketplace listing.
