--- a/docs/partner_editable/pre-reqs.adoc
+++ b/docs/partner_editable/pre-reqs.adoc
@@ -1,13 +1,20 @@
 // If no preperation is required, remove all content from here
 
-==== Prepare your AWS account
+==== Requirements for deploying Aurora into an existing VPC
 
-_Describe any setup required in the AWS account prior to template launch_
+If you’re planning to deploy Aurora into an existing VPC, check the following:
 
-==== Prepare your {partner-company-name} account
+* Your VPC must have two private subnets in different Availability Zones for the database
+instances. This Quick Start doesn’t support https://docs.aws.amazon.com/vpc/latest/userguide/vpc-sharing.html[shared subnets].
+* The private subnets require https://docs.aws.amazon.com/vpc/latest/userguide/vpc-nat-gateway.html[NAT gateways] in their route tables, to allow the instances to
+download packages and software without exposing them to the internet.
+* The domain name option must be configured in the DHCP options as explained in the
+http://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/VPC_DHCP_Options.html[Amazon VPC documentation].
+* You’ll need a Linux bastion host that can be used to run the test procedure discussed in
+step 3. To install the bastion host, you can launch the https://github.com/aws-quickstart/quickstart-linux-bastion/blob/master/templates/linux-bastion.template[AWS CloudFormation template]
+we’ve provided into your existing subnet.
+You’ll be prompted for your VPC settings when you launch the Quick Start.
 
-_Describe any setup required in the partner portal/account prior to template launch_
-
-==== Prepare for the deployment
-
-_Describe any preparation required to complete the product build, such as obtaining licenses or placing files in S3_
+If you don’t have an existing VPC that satisfies these requirements, we recommend that you
+use the new VPC deployment option, so the Quick Start will build this VPC for you in
+addition to deploying Aurora into the VPC.
