--- a/docs/partner_editable/regions.adoc
+++ b/docs/partner_editable/regions.adoc
@@ -1,4 +1,3 @@
-The following Regions are currently supported by this Quick Start.
+Aurora MySQL compatibility isn’t currently supported in all AWS
+Regions. For a current list of supported regions, see the https://docs.aws.amazon.com/general/latest/gr/rande.html#aurora[AWS Regions and Endpoints webpage].
 
-- _us-east-1 (N. Virginia)_ (EXAMPLE)
-- _us-east-2 (Ohio)_ (EXAMPLE)
