--- a/docs/partner_editable/specialized_knowledge.adoc
+++ b/docs/partner_editable/specialized_knowledge.adoc
@@ -1,6 +1,10 @@
 // Replace the content in <>
 // Describe or link to specific knowledge requirements; for example: “familiarity with basic concepts in the areas of networking, database operations, and data encryption” or “familiarity with <software>.”
 
-This Quick Start assumes familiarity with <knowledge expectations>.
-
-
+This Quick Start assumes familiarity with database concepts and usage.
+This deployment guide also requires a moderate level of familiarity with AWS services. If
+you’re new to AWS, visit the https://aws.amazon.com/getting-started/[Getting Started Resource Center] 
+and the https://aws.amazon.com/training/[AWS Training and Certification website] for materials and programs that can help you develop the skills to
+design, deploy, and operate your infrastructure and applications on the AWS Cloud. For
+more information about AWS services used in this Quick Start, see the Additional resources
+section.
