--- a/docs/partner_editable/faq_troubleshooting.adoc
+++ b/docs/partner_editable/faq_troubleshooting.adoc
@@ -1,6 +1,6 @@
 // Add any tips or answers to anticipated questions. This could include the following troubleshooting information. If you don’t have any other Q&A to add, change “FAQ” to “Troubleshooting.”
 
-== FAQ
+=== FAQ
 
 *Q.* I encountered a *CREATE_FAILED* error when I launched the Quick Start.
 
@@ -14,8 +14,3 @@ For additional information, see https://docs.aws.amazon.com/AWSCloudFormation/la
 *Q.* I encountered a size limitation error when I deployed the AWS CloudFormation templates.
 
 *A.* We recommend that you launch the Quick Start templates from the links in this guide or from another S3 bucket. If you deploy the templates from a local copy on your computer or from a location other than an S3 bucket, you might encounter template size limitations. For more information about AWS CloudFormation quotas, see the http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cloudformation-limits.html[AWS documentation^].
-
-
-== Troubleshooting
-
-<Steps for troubleshooting the deployment go here.>
