--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -1,13 +1,14 @@
 :quickstart-project-name: quickstart-amazon-aurora-mysql
-:partner-product-name: Amazon Aurora MySQL database
+:partner-product-name: Amazon Aurora MySQL Database
 :partner-product-short-name: Aurora MySQL
 //:partner-company-name: Example Company Name, Ltd.
-:doc-month: September
-:doc-year: 2020
+:doc-month: March
+:doc-year: 2021
 //:partner-contributors: John Doe and Jane Doe - {partner-company-name}
 :quickstart-contributors: AWS Quick Start team
 :deployment_time: 30 minutes
 :default_deployment_region: us-east-1
+:parameters_as_appendix:
 // Uncomment these two attributes if you are leveraging
 // - an AWS Marketplace listing.
 // Additional content will be auto-generated based on these attributes.
