--- a/docs/partner_editable/pre-reqs.adoc
+++ b/docs/partner_editable/pre-reqs.adoc
@@ -2,19 +2,14 @@
 
 ==== Requirements for deploying Aurora into an existing VPC
 
-If you’re planning to deploy Aurora into an existing VPC, check the following:
+If you plan to deploy Aurora into an existing VPC, check the following:
 
 * Your VPC must have two private subnets in different Availability Zones for the database
-instances. This Quick Start doesn’t support https://docs.aws.amazon.com/vpc/latest/userguide/vpc-sharing.html[shared subnets].
-* The private subnets require https://docs.aws.amazon.com/vpc/latest/userguide/vpc-nat-gateway.html[NAT gateways] in their route tables, to allow the instances to
-download packages and software without exposing them to the internet.
-* The domain name option must be configured in the DHCP options as explained in the
-http://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/VPC_DHCP_Options.html[Amazon VPC documentation].
-* You’ll need a Linux bastion host that can be used to run the test procedure discussed in
-step 3. To install the bastion host, you can launch the https://github.com/aws-quickstart/quickstart-linux-bastion/blob/master/templates/linux-bastion.template[AWS CloudFormation template]
-we’ve provided into your existing subnet.
-You’ll be prompted for your VPC settings when you launch the Quick Start.
+instances. This Quick Start does not support https://docs.aws.amazon.com/vpc/latest/userguide/vpc-sharing.html[shared subnets^].
+* To download packages and software without exposing instances to the internet, the private subnets require https://docs.aws.amazon.com/vpc/latest/userguide/vpc-nat-gateway.html[NAT gateways] in their route tables.
+* The domain name must be configured in the Dynamic Host Configuration Protocol (DHCP) options. For more information, see https://docs.aws.amazon.com/vpc/latest/userguide/VPC_DHCP_Options.html[DHCP options sets^]
+* You must have a Linux bastion host to run the tests discussed in step 3. To install the bastion host, launch the https://github.com/aws-quickstart/quickstart-linux-bastion/blob/master/templates/linux-bastion.template[AWS CloudFormation template^] that we provide for an existing subnet. When you launch the Quick Start, you are prompted for your VPC settings.
 
 If you don’t have an existing VPC that satisfies these requirements, we recommend that you
-use the new VPC deployment option, so the Quick Start will build this VPC for you in
-addition to deploying Aurora into the VPC.
+use the new-VPC deployment option so that the Quick Start builds a VPC for you in
+addition to deploying {partner-product-short-name}.
