--- a/docs/partner_editable/regions.adoc
+++ b/docs/partner_editable/regions.adoc
@@ -1,3 +1,3 @@
-Aurora MySQL compatibility isn’t currently supported in all AWS
-Regions. For a current list of supported regions, see the https://docs.aws.amazon.com/general/latest/gr/rande.html#aurora[AWS Regions and Endpoints webpage].
+Aurora MySQL compatibility is not supported in all AWS
+Regions. For a list of supported Regions, see https://docs.aws.amazon.com/general/latest/gr/rande.html#aurora[AWS service endpoints^].
 
