--- a/docs/partner_editable/licenses.adoc
+++ b/docs/partner_editable/licenses.adoc
@@ -1,5 +1,3 @@
 // Include details about the license and how they can sign up. If no license is required, clarify that. 
 
-There are no 
-//TODO Explain what "additional" means, and clarify why no other license are required.
-additional licensing requirements to use this Quick Start.
+MySQL is free an open-source, so no license is required to use this Quick Start.
