--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -1,12 +1,11 @@
 Deploying this Quick Start for a new virtual private cloud (VPC) with
-default parameters builds the following _{partner-product-short-name}_ environment in the
+default parameters builds the following {partner-product-short-name} environment in the
 AWS Cloud.
 
 // Replace this example diagram with your own. Send us your source PowerPoint file. Be sure to follow our guidelines here : http://(we should include these points on our contributors giude)
 [#architecture1]
 .Quick Start architecture for _{partner-product-short-name}_ on AWS
-[link=images/architecture_diagram.png]
-image::../images/architecture_diagram.png[Architecture,width=648,height=439]
+image::../images/aurora-mysql-architecture_diagram.png[Architecture]
 
 As shown in Figure 1, the Quick Start sets up the following:
 
@@ -17,10 +16,14 @@ provide you with your own virtual network on AWS.*
 ** Managed network address translation (NAT) gateways to allow outbound internet access for resources in the private subnets.*
 ** (Optional) A Linux bastion host in an Auto Scaling group to allow inbound Secure Shell (SSH) access to Amazon Elastic Compute Cloud (Amazon EC2) instances in the private subnets.*
 * In the private subnets:
-** An Aurora database cluster that includes one database reader and one database writer.
-* An encryption key using AWS Key Management Service (AWS KMS). The key enables encryption at rest for the Aurora database cluster.
+** An Aurora database cluster in a security group, including one database reader and one database writer.
 * An Amazon CloudWatch alarm to monitor the CPU on the bastion host and send alarm notifications using Amazon Simple Notification Service (Amazon SNS).
+* An encryption key using AWS Key Management Service (AWS KMS). The key enables encryption at rest for the Aurora database cluster.
 
-*The template that deploys the Quick Start into an existing VPC skips
+[.small]#*The template that deploys the Quick Start into an existing VPC skips
 the components marked by asterisks and prompts you for your existing VPC
-configuration.
+configuration.#
+
+//TODO Dave, What more might we say about the database reader and writer? (Also I wonder why they're in separate AZs in the diagram ... seems like if one AZ went down, that would present a problem, no?)
+
+//TODO Dave, We mention "EC2 instances in the private subnets," but we don't show any in the diagram. Should we? We normally wouldn't mention things in the bulleted list that don't appear in the diagram ... unless we say "(not shown)."
