--- a/docs/partner_editable/deploy_steps.adoc
+++ b/docs/partner_editable/deploy_steps.adoc
@@ -24,11 +24,13 @@ endif::marketplace_subscription[]
 
 === Launch the Quick Start
 
-NOTE: You are responsible for the cost of the AWS services used while running this Quick Start reference deployment. There is no additional cost for using this Quick Start. For full details, see the pricing pages for each AWS service used by this deployment. Prices are subject to change.
+WARNING: This Quick Start does not support https://docs.aws.amazon.com/vpc/latest/userguide/vpc-sharing.html[shared subnets^]. If you’re deploying {partner-product-short-name} into an existing VPC, ensure that your VPC has two private subnets in different Availability Zones for the workload instances. And ensure that the subnets aren’t shared. These subnets require https://docs.aws.amazon.com/vpc/latest/userguide/vpc-nat-gateway.html[NAT gateways^] in their route tables to allow the instances to download packages and software without exposing them to the internet.
+
+Each deployment takes about {deployment_time} to complete.
 
 . Sign in to your AWS account, and choose one of the following options to launch the AWS CloudFormation template. For help with choosing an option, see link:#_deployment_options[Deployment options], earlier in this guide.
 
-[cols=2*]
+[cols="3,1"]
 |===
 ^|http://qs_launch_link[Deploy {partner-product-short-name} into a new VPC on AWS^]
 ^|http://qs_template_link[View template^]
@@ -37,9 +39,8 @@ NOTE: You are responsible for the cost of the AWS services used while running th
 ^|http://qs_template_link[View template^]
 |===
 
-WARNING: This Quick Start does not support https://docs.aws.amazon.com/vpc/latest/userguide/vpc-sharing.html[shared subnets^]. If you’re deploying {partner-product-short-name} into an existing VPC, ensure that your VPC has two private subnets in different Availability Zones for the workload instances and that the subnets aren’t shared. These subnets require https://docs.aws.amazon.com/vpc/latest/userguide/vpc-nat-gateway.html[NAT gateways^] in their route tables to allow the instances to download packages and software without exposing them to the internet.
-
-Each deployment takes about {deployment_time} to complete.
+//TODO Marcia to create the permalinks as soon as Dave confirms whether the file named "aurora_mysql-MASTER.template.yaml" is being renamed. 
+//Marcia, I will rename the file
 
 [start=2]
 . Check the AWS Region that’s displayed in the upper-right corner of the navigation bar, and change it if necessary. This is where the network infrastructure for {partner-product-short-name} is built. The template launches in the {default_deployment_region} Region by default.
