--- a/docs/partner_editable/deploy_steps.adoc
+++ b/docs/partner_editable/deploy_steps.adoc
@@ -32,18 +32,15 @@ Each deployment takes about {deployment_time} to complete.
 
 [cols="3,1"]
 |===
-^|http://qs_launch_link[Deploy {partner-product-short-name} into a new VPC on AWS^]
-^|http://qs_template_link[View template^]
+^|https://fwd.aws/gYqDp[Deploy {partner-product-short-name} into a new VPC on AWS^]
+^|https://fwd.aws/bXw6E[View template^]
 
-^|http://qs_launch_link[Deploy {partner-product-short-name} into an existing VPC on AWS^]
-^|http://qs_template_link[View template^]
+^|https://fwd.aws/JkrdW[Deploy {partner-product-short-name} into an existing VPC on AWS^]
+^|https://fwd.aws/RzWjB[View template^]
 |===
 
-//TODO Marcia to create the permalinks as soon as Dave confirms whether the file named "aurora_mysql-MASTER.template.yaml" is being renamed. 
-//Marcia, I will rename the file
-
 [start=2]
-. Check the AWS Region that’s displayed in the upper-right corner of the navigation bar, and change it if necessary. This is where the network infrastructure for {partner-product-short-name} is built. The template launches in the {default_deployment_region} Region by default.
+. Check the AWS Region that’s displayed in the upper-right corner of the navigation bar, and change it if necessary. This is where the network infrastructure for {partner-product-short-name} is built. The template launches in the {default_deployment_region} Region by default. For other choices, see https://docs.aws.amazon.com/general/latest/gr/aurora.html[Amazon Aurora endpoints and quotas^].
 
 // *Note:* This deployment includes Amazon EFS, which isn’t currently supported in all AWS Regions. For a current list of supported Regions, see the https://docs.aws.amazon.com/general/latest/gr/elasticfilesystem.html[endpoints and quotas webpage].
 
