--- a/docs/partner_editable/specialized_knowledge.adoc
+++ b/docs/partner_editable/specialized_knowledge.adoc
@@ -1,4 +1,8 @@
 // Replace the content in <>
 // Describe or link to specific knowledge requirements; for example: “familiarity with basic concepts in the areas of networking, database operations, and data encryption” or “familiarity with <software>.”
 
-This Quick Start assumes familiarity with database concepts and usage.
+This Quick Start assumes familiarity with database concepts and usage as described in the following documentation: 
+
+* https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Welcome.html[What is Amazon Relational Database Service (Amazon RDS)?^] 
+* https://docs.aws.amazon.com/AmazonRDS/latest/AuroraUserGuide/CHAP_AuroraOverview.html[What is Amazon Aurora?^]
+* https://aws.amazon.com/rds/aurora/mysql-features/[Amazon Aurora Features: MySQL-Compatible Edition^]
